--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
+    <meta name="darkreader-lock">
+
     <title>bingo generator</title>
 
     <link rel="stylesheet" href="style.css" >
