--- a/site/bingo-template.html
+++ b/site/bingo-template.html
@@ -19,15 +19,15 @@
 
 
         body {
-            margin: 0;
+            max-width: 8.5in;
 
             display: flex;
             flex-flow: column nowrap;
             align-items: center;
             gap: 1em;
-
+            
+            margin: 0;
             padding: 0.5in;
-            max-width: 100dvw;
         }
 
         .bingo-board {
